// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`karura & shiden > karura transfer KAR to shiden > balance on from chain 1`] = `
{
  "consumers": 0,
  "data": {
    "flags": "0x80000000000000000000000000000000",
    "free": "(rounded 9000000000000)",
    "frozen": 0,
    "reserved": 0,
  },
  "nonce": 1,
  "providers": 4,
  "sufficients": 0,
}
`;

exports[`karura & shiden > karura transfer KAR to shiden > balance on to chain 1`] = `
{
  "balance": "(rounded 999000000000)",
  "extra": null,
  "reason": {
    "sufficient": null,
  },
  "status": "Liquid",
}
`;

exports[`karura & shiden > karura transfer KAR to shiden > from chain hrmp messages 1`] = `
[
  {
    "data": [
      "ConcatenatedVersionedXcm",
      {
        "v4": [
          {
            "reserveAssetDeposited": [
              {
                "fun": {
                  "fungible": 1000000000000,
                },
                "id": {
                  "interior": {
                    "x2": [
                      {
                        "parachain": 2000,
                      },
                      {
                        "generalKey": {
                          "data": "0x0080000000000000000000000000000000000000000000000000000000000000",
                          "length": 2,
                        },
                      },
                    ],
                  },
                  "parents": 1,
                },
              },
            ],
          },
          {
            "clearOrigin": null,
          },
          {
            "buyExecution": {
              "fees": {
                "fun": {
                  "fungible": 1000000000000,
                },
                "id": {
                  "interior": {
                    "x2": [
                      {
                        "parachain": 2000,
                      },
                      {
                        "generalKey": {
                          "data": "0x0080000000000000000000000000000000000000000000000000000000000000",
                          "length": 2,
                        },
                      },
                    ],
                  },
                  "parents": 1,
                },
              },
              "weightLimit": {
                "unlimited": null,
              },
            },
          },
          {
            "depositAsset": {
              "assets": {
                "wild": {
                  "allCounted": 1,
                },
              },
              "beneficiary": {
                "interior": {
                  "x1": [
                    {
                      "accountId32": {
                        "id": "0xd17c2d7823ebf260fd138f2d7e27d114c0145d968b5ff5006125f2414fadae69",
                        "network": null,
                      },
                    },
                  ],
                },
                "parents": 0,
              },
            },
          },
        ],
      },
    ],
    "recipient": 2007,
  },
]
`;

exports[`karura & shiden > karura transfer KAR to shiden > to chain xcm events 1`] = `
[
  {
    "data": {
      "id": "(hash)",
      "origin": {
        "Sibling": 2000,
      },
      "success": true,
      "weightUsed": {
        "proofSize": "(rounded 9000)",
        "refTime": "(rounded 900000000)",
      },
    },
    "method": "Processed",
    "section": "messageQueue",
  },
]
`;

exports[`karura & shiden > karura transfer KAR to shiden > tx events 1`] = `
[
  {
    "data": {
      "assets": [
        {
          "fun": {
            "Fungible": 1000000000000,
          },
          "id": {
            "interior": {
              "X2": [
                {
                  "Parachain": 2000,
                },
                {
                  "GeneralKey": {
                    "data": "(hash)",
                    "length": 2,
                  },
                },
              ],
            },
            "parents": 1,
          },
        },
      ],
      "dest": {
        "interior": {
          "X2": [
            {
              "Parachain": "(rounded 2000)",
            },
            {
              "AccountId32": {
                "id": "(hash)",
                "network": null,
              },
            },
          ],
        },
        "parents": 1,
      },
      "fee": {
        "fun": {
          "Fungible": 1000000000000,
        },
        "id": {
          "interior": {
            "X2": [
              {
                "Parachain": 2000,
              },
              {
                "GeneralKey": {
                  "data": "(hash)",
                  "length": 2,
                },
              },
            ],
          },
          "parents": 1,
        },
      },
      "sender": "rPizfonc8MPuEsMxufAytHjpRW7a2YrXWHKibaJXe9ZtjKx",
    },
    "method": "TransferredAssets",
    "section": "xTokens",
  },
]
`;

exports[`karura & shiden > shiden transfer KAR to karura > balance on from chain 1`] = `
{
  "balance": 19000000000000,
  "extra": null,
  "reason": {
    "consumer": null,
  },
  "status": "Liquid",
}
`;

exports[`karura & shiden > shiden transfer KAR to karura > balance on to chain 1`] = `
{
  "consumers": 0,
  "data": {
    "flags": "0x80000000000000000000000000000000",
    "free": "(rounded 991000000000)",
    "frozen": 0,
    "reserved": 0,
  },
  "nonce": 0,
  "providers": 1,
  "sufficients": 0,
}
`;

exports[`karura & shiden > shiden transfer KAR to karura > from chain hrmp messages 1`] = `
[
  {
    "data": [
      "ConcatenatedVersionedXcm",
      {
        "v3": [
          {
            "withdrawAsset": [
              {
                "fun": {
                  "fungible": 1000000000000,
                },
                "id": {
                  "concrete": {
                    "interior": {
                      "x1": {
                        "generalKey": {
                          "data": "0x0080000000000000000000000000000000000000000000000000000000000000",
                          "length": 2,
                        },
                      },
                    },
                    "parents": 0,
                  },
                },
              },
            ],
          },
          {
            "clearOrigin": null,
          },
          {
            "buyExecution": {
              "fees": {
                "fun": {
                  "fungible": 1000000000000,
                },
                "id": {
                  "concrete": {
                    "interior": {
                      "x1": {
                        "generalKey": {
                          "data": "0x0080000000000000000000000000000000000000000000000000000000000000",
                          "length": 2,
                        },
                      },
                    },
                    "parents": 0,
                  },
                },
              },
              "weightLimit": {
                "unlimited": null,
              },
            },
          },
          {
            "depositAsset": {
              "assets": {
                "wild": {
                  "allCounted": 1,
                },
              },
              "beneficiary": {
                "interior": {
                  "x1": {
                    "accountId32": {
                      "id": "0xd17c2d7823ebf260fd138f2d7e27d114c0145d968b5ff5006125f2414fadae69",
                      "network": null,
                    },
                  },
                },
                "parents": 0,
              },
            },
          },
          {
            "setTopic": "(redacted)",
          },
        ],
      },
    ],
    "recipient": 2000,
  },
]
`;

exports[`karura & shiden > shiden transfer KAR to karura > to chain xcm events 1`] = `
[
  {
    "data": {
      "id": "(hash)",
      "origin": {
        "Sibling": "(rounded 2000)",
      },
      "success": true,
      "weightUsed": {
        "proofSize": 0,
        "refTime": 1000000000,
      },
    },
    "method": "Processed",
    "section": "messageQueue",
  },
]
`;

exports[`karura & shiden > shiden transfer KAR to karura > tx events 1`] = `
[
  {
    "data": {
      "assets": [
        {
          "fun": {
            "Fungible": 1000000000000,
          },
          "id": {
            "interior": {
              "X2": [
                {
                  "Parachain": 2000,
                },
                {
                  "GeneralKey": {
                    "data": "(hash)",
                    "length": 2,
                  },
                },
              ],
            },
            "parents": 1,
          },
        },
      ],
      "dest": {
        "interior": {
          "X2": [
            {
              "Parachain": 2000,
            },
            {
              "AccountId32": {
                "id": "(hash)",
                "network": null,
              },
            },
          ],
        },
        "parents": 1,
      },
      "fee": {
        "fun": {
          "Fungible": 1000000000000,
        },
        "id": {
          "interior": {
            "X2": [
              {
                "Parachain": 2000,
              },
              {
                "GeneralKey": {
                  "data": "(hash)",
                  "length": 2,
                },
              },
            ],
          },
          "parents": 1,
        },
      },
      "sender": "Z2kDhBaTFjDS4eyFK26rBVTsy5EQUfHxgcvsYeQ95N73hh9",
    },
    "method": "TransferredAssets",
    "section": "xTokens",
  },
]
`;
